--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brian M. Staes - Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-    <section id="home">
-        <h2>Welcome to My Portfolio</h2>
-        <p>Hi, I'm [Your Name], a [your profession, e.g., web developer].</p>
-    </section>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write about yourself here.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-            <a href="project-link">View Project</a>
-        </div>
-        <!-- Add more projects as needed -->
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-        <p>GitHub: <a href="https://github.com/your-username">your-username</a></p>
-    </section>
-    <script src="script.js"></script>
+  <!-- Header / Navigation -->
+  <header>
+    <h1>Brian M. Staes</h1>
+    <p>Postdoctoral Scholar · Transportation Engineering</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#publications">Publications</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Sections -->
+  <section id="about">
+    <h2>About</h2>
+    <p>Write a short bio here...</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>List your projects here...</p>
+  </section>
+
+  <section id="publications">
+    <h2>Publications</h2>
+    <ul>
+      <li>Staes, B. et al. (2025). Example paper. <i>Journal Name</i>.</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:brian@example.com">brian@example.com</a></p>
+    <p>GitHub: <a href="https://github.com/brianstaes">github.com/brianstaes</a></p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
