--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brian M. Staes - Portfolio</title>
+  <title>Brian M. Staes Postdoctoral Scholar Clemson University</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
