--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Header / Navigation -->
   <header>
     <h1>Brian M. Staes</h1>
-    <p>Postdoctoral Scholar · Transportation Engineering</p>
+    <p>Postdoctoral Scholar
+Clemson University · Transportation Engineering</p>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
