--- a/index.html
+++ b/index.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brian M. Staes Postdoctoral Scholar Clemson University</title>
+  <title>Brian M. Staes - Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header / Navigation -->
-  <header>
-    <h1>Brian M. Staes</h1>
-    <p>Postdoctoral Scholar
-Clemson University · Transportation Engineering</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#publications">Publications</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <div class="container">
 
-  <!-- Sections -->
-  <section id="about">
-    <h2>About</h2>
-    <p>Write a short bio here...</p>
-  </section>
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <img src="your-photo.jpg" alt="Profile photo">
+      <h1>Brian M. Staes</h1>
+      <p>Postdoctoral Scholar<br>Oregon State University</p>
+      <p>Transportation Engineering</p>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>List your projects here...</p>
-  </section>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#news">News</a>
+        <a href="#projects">Projects</a>
+        <a href="#publications">Publications</a>
+        <a href="#contact">Contact</a>
+      </nav>
 
-  <section id="publications">
-    <h2>Publications</h2>
-    <ul>
-      <li>Staes, B. et al. (2025). Example paper. <i>Journal Name</i>.</li>
-    </ul>
-  </section>
+      <div class="links">
+        <p>📍 Oregon, USA</p>
+        <p>✉️ <a href="mailto:brian@example.com">Email</a></p>
+        <p>🐙 <a href="https://github.com/brianstaes">GitHub</a></p>
+        <p>🎓 <a href="https://scholar.google.com">Google Scholar</a></p>
+      </div>
+    </aside>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:brian@example.com">brian@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/brianstaes">github.com/brianstaes</a></p>
-  </section>
+    <!-- Main Content -->
+    <main class="content">
+      <section id="about">
+        <h2>About Me</h2>
+        <p>Write a short bio here about your background, research interests, and goals.</p>
+      </section>
+
+      <section id="news">
+        <h2>News</h2>
+        <ul>
+          <li><b>2025.09:</b> Gave invited seminar at XYZ University.</li>
+          <li><b>2025.06:</b> Published paper on Rail Infrastructure Resilience.</li>
+        </ul>
+      </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+        <p>Summarize your major projects.</p>
+      </section>
+
+      <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+          <li>Staes, B.M. et al. (2025). Example Paper. <i>Journal Name</i>.</li>
+        </ul>
+      </section>
+
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:brian@example.com">brian@example.com</a></p>
+      </section>
+    </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
