--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 </head>
 <body>
   <div class="container">
+    
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="profile">
-        <!-- Put your headshot as /img/brian.jpg (recommended ~500x500) -->
-        <img src="img/brian.jpg" alt="Brian M. Staes headshot" />
+        <!-- Put your headshot inside /images/profile.jpg -->
+        <img src="images/profile.jpg" alt="Brian M. Staes headshot" />
         <h1>Brian M. Staes</h1>
         <p class="role">Postdoctoral Scholar</p>
-        <p class="affil">School of Civil &amp; Construction Engineering<br/>Oregon State University</p>
+        <p class="affil">School of Civil &amp; Environmental Engineering<br/>Clemson University</p>
         <div class="quick-links">
-          <a href="mailto:staesb@oregonstate.edu" aria-label="Email">✉️ Email</a>
-          <a href="https://github.com/brianstaes" target="_blank" rel="noopener" aria-label="GitHub">🐙 GitHub</a>
-          <!-- If you have a direct Scholar profile link, replace this -->
-          <a href="https://scholar.google.com/" target="_blank" rel="noopener" aria-label="Google Scholar">🎓 Scholar</a>
-          <!-- Optional: host a PDF at /assets/Brian_Staes_CV.pdf -->
-          <a href="assets/Brian_Staes_CV.pdf" target="_blank" rel="noopener" aria-label="Download CV">📄 CV (PDF)</a>
+          <a href="mailto:staesb@oregonstate.edu">✉️ Email</a>
+          <a href="https://github.com/brianstaes" target="_blank">🐙 GitHub</a>
+          <a href="https://scholar.google.com/" target="_blank">🎓 Scholar</a>
+          <a href="assets/Brian_Staes_CV.pdf" target="_blank">📄 CV (PDF)</a>
         </div>
       </div>
 
@@ -47,6 +46,8 @@
         <small>© <span id="year"></span> Brian M. Staes</small>
       </footer>
     </aside>
+
+
 
     <!-- Main content -->
     <main class="content" id="content">
