--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <aside class="sidebar">
       <div class="profile">
         <!-- Put your headshot inside /images/profile.jpg -->
-        <img src="images/profile.jpg" alt="Brian M. Staes headshot" />
+        <img src="images/Headshot_full.jpg" alt="Brian M. Staes headshot" />
         <h1>Brian M. Staes</h1>
         <p class="role">Postdoctoral Scholar</p>
         <p class="affil">School of Civil &amp; Environmental Engineering<br/>Clemson University</p>
