--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <p class="role">Postdoctoral Scholar</p>
         <p class="affil">School of Civil &amp; Environmental Engineering<br/>Clemson University</p>
         <div class="quick-links">
-          <a href="mailto:staesb@oregonstate.edu">✉️ Email</a>
+          <a href="mailto:bstaes15@gmail.com">✉️ Email</a>
           <a href="https://github.com/brianstaes" target="_blank">🐙 GitHub</a>
-          <a href="https://scholar.google.com/" target="_blank">🎓 Scholar</a>
+          <a href="https://scholar.google.com/citations?user=gkaR44MAAAAJ&hl=en&oi=ao" target="_blank">🎓 Scholar</a>
           <a href="assets/Brian_Staes_CV.pdf" target="_blank">📄 CV (PDF)</a>
         </div>
       </div>
@@ -63,6 +63,7 @@
         <ul class="bullets">
           <li><b>2025-09:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.</li>
           <li><b>2025-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
+          <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li>
         </ul>
       </section>
 
@@ -161,7 +162,7 @@
         <ul class="bullets two-col">
           <li>Traffic Flow Theory (Time–Space Diagrams; Macroscopic Models)</li>
           <li>Signal Design &amp; Timing Basics; LOS of Signalized Intersections</li>
-          <li>Queueing Theory (CE 491/593, OSU)</li>
+          <li>Traffic Opperations (CE 491/593, OSU)</li>
           <li>Evacuation Modeling (ABM + LCD/least-cost path)</li>
           <li>Guest: TUM LBCS model for evacuations</li>
         </ul>
