--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="mailto:bstaes15@gmail.com">✉️ Email</a>
           <a href="https://github.com/brianstaes" target="_blank">🐙 GitHub</a>
           <a href="https://scholar.google.com/citations?user=gkaR44MAAAAJ&hl=en&oi=ao" target="_blank">🎓 Scholar</a>
-          <a href="assets/Brian_Staes_CV.pdf" target="_blank">📄 CV (PDF)</a>
+          <a href="assets/Brian M Staes CV_Updated.pdf" target="_blank">📄 CV (PDF)</a>
         </div>
       </div>
 
