--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>Experience</h2>
         <div class="timeline">
           <div class="item">
-            <div class="when">03/2025&nbsp;–&nbsp;09/2025</div>
+            <div class="when">09/2025&nbsp;–&nbsp;Present</div>
             <div class="what">
               <b>Postdoctoral Scholar</b>, Clemson University — Glenn Department of Civil Engineering - School of Civil and Environmental Engineering and Earth Sciences
             </div>
