--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section id="news" class="section">
         <h2>News</h2>
         <ul class="bullets">
-          <li><b>2025-09:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.</li>
+          <li><b>2025-01:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.</li>
           <li><b>2025-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
           <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li>
         </ul>
@@ -79,7 +79,7 @@
           <div class="item">
             <div class="when">03/2025&nbsp;–&nbsp;09/2025</div>
             <div class="what">
-              <b>Postdoctoral Scholar</b>, Oregon State University — School of Civil &amp; Construction Engineering
+              <b>Postdoctoral Scholar</b>, Oregon State University — School of Civil and Construction Engineering
             </div>
           </div>
           <div class="item">
