--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
         </ul>
       </section>
 
+      <section id="License" class="section">
+        <h2>Licensure</h2>
+        <ul class="bullets two-col">
+          <li>Florida PE passed, pending years of experience/teaching</li>
+        </ul>
+    </section>
+
       <section id="awards" class="section">
         <h2>Awards &amp; Honors</h2>
         <ul class="bullets two-col">
