--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <section id="License" class="section">
         <h2>Licensure</h2>
         <ul class="bullets two-col">
-          <li>Florida PE passed, pending years of experience/teaching</li>
+          <li>Florida Civil Transportation Engineering PE passed, pending years of experience/teaching</li>
         </ul>
     </section>
 
