--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <section id="License" class="section">
         <h2>Licensure</h2>
         <ul class="bullets two-col">
-          <li>PE | Florida Civil Transportation Engineering passed, pending years of work/teaching experience</li>
+          <li>PE | Florida Civil Transportation Engineering exam passed, pending years of work/teaching experience</li>
         </ul>
     </section>
 
