--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <section id="contact" class="section">
         <h2>Contact</h2>
         <p>
-          <b>Email:</b> <a href="mailto:staesb@oregonstate.edu">staesb@oregonstate.edu</a><br/>
+          <b>Email:</b> <a href="mailto:bstaes15@gmail.com">staesb@oregonstate.edu</a><br/>
           <b>GitHub:</b> <a href="https://github.com/brianstaes" target="_blank" rel="noopener">github.com/brianstaes</a><br/>
           <b>Location:</b> Oregon, USA
         </p>
