--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
       <section id="news" class="section">
         <h2>News</h2>
         <ul class="bullets">
-          <li><b>2025-01:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.</li>
-              <li><b>2025-01:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.</li>
-                <div class="news-photos">
-                  <img src="images/20250106_155147.jpg" alt="Dissertation Defense 1">
-                  %<img src="images/defense2.jpg" alt="Dissertation Defense 2">
-                 % <img src="images/defense3.jpg" alt="Dissertation Defense 3">
-                </div>
+          <li>
+            <b>2025-01:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.
+            <div class="news-photos">
+              <img src="images/20250106_155147.jpg" alt="Dissertation Defense 1">
+              <img src="images/defense2.jpg" alt="Dissertation Defense 2">
+              <img src="images/defense3.jpg" alt="Dissertation Defense 3">
+            </div>
           </li>
           <li><b>2025-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
           <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li>
         </ul>
-      </section> 20250106_155147.jpg
+      </section>
 
       <section id="experience" class="section">
         <h2>Experience</h2>
