--- a/index.html
+++ b/index.html
@@ -62,14 +62,24 @@
         <h2>News</h2>
         <ul class="bullets">
           <li>
-            <b>2025-01:</b> Poster at TRB on climate-driven rail thermal buckling risk modeling.
+            <b>2025-03:</b> Defended my Dissertation!
             <div class="news-photos">
-              <img src="images/20250106_155147.jpg" alt="Dissertation Defense 1">
-              <img src="images/defense2.jpg" alt="Dissertation Defense 2">
-              <img src="images/defense3.jpg" alt="Dissertation Defense 3">
+              <img src="images/Dissertation_1.jpg" alt="TRB_1">
+              <img src="images/Dissertation_2.jpg.jpg" alt="TRB_2">
+              <img src="images/Dissertation_3.jpg" alt="TRB_3">
+              <img src="images/Dissertation_4.jpg" alt="TRB_3">
             </div>
           </li>
-          <li><b>2025-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
+          </li>
+          <li>
+            <b>2025-01:</b> TRB 2025 - Posters on Thermal Buckling Risk & Curtation of a Rail Natural Hazards Database
+            <div class="news-photos">
+              <img src="images/20250106_155147.jpg" alt="TRB_1">
+              <img src="images/IMG-20250107-WA0033.jpg" alt="TRB_2">
+              <img src="images/20250105_172454.jpg" alt="TRB_3">
+            </div>
+          </li>
+          <li><b>2024-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
           <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li>
         </ul>
       </section>
