--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
         <h2>News</h2>
         <ul class="bullets">
           <li>
-            <b>2025-03:</b> Defended my Dissertation!
+            <b>2025-03:</b> Defended my Dissertation! <br><br></li>
             <div class="news-photos">
               <img src="images/Dissertation_1.jpg" alt="TRB_1">
-              <img src="images/Dissertation_2.jpg.jpg" alt="TRB_2">
+              <img src="images/Dissertation_2.jpg" alt="TRB_2">
               <img src="images/Dissertation_3.jpg" alt="TRB_3">
               <img src="images/Dissertation_4.jpg" alt="TRB_3">
             </div>
           </li>
           </li>
           <li>
-            <b>2025-01:</b> TRB 2025 - Posters on Thermal Buckling Risk & Curtation of a Rail Natural Hazards Database
+            <b>2025-01:</b> TRB 2025 - Posters on Thermal Buckling Risk & Curtation of a Rail Natural Hazards Database<br><br></li>
             <div class="news-photos">
               <img src="images/20250106_155147.jpg" alt="TRB_1">
               <img src="images/IMG-20250107-WA0033.jpg" alt="TRB_2">
               <img src="images/20250105_172454.jpg" alt="TRB_3">
             </div>
           </li>
-          <li><b>2024-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li>
-          <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li>
+          <li><b>2024-07:</b> <i>TRR</i> paper on LBCS macroscopic congestion patterns published (open data/code forthcoming).</li> <br><br></li>
+          <li><b>2023-03:</b> Oregon State University Mentor Match https://engineering.oregonstate.edu/all-stories/mentor-match-1.</li> <br><br></li>
         </ul>
       </section>
 
