--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <img src="images/Dissertation_4.jpg" alt="TRB_3">
             </div>
           </li>
-          <li>
+          <li style="margin-bottom: 15px;">
             <b>2025-01:</b> TRB 2025 - Posters on Thermal Buckling Risk & Curtation of a Rail Natural Hazards Database <br><br></li>
             <div class="news-photos">
               <img src="images/20250106_155147.jpg" alt="TRB_1">
