--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <li>Signal Design &amp; Timing Basics; LOS of Signalized Intersections</li>
           <li>Traffic Opperations (CE 491/593, OSU)</li>
           <li>Evacuation Modeling (ABM + LCD/least-cost path)</li>
-          <li>Guest: TUM LBCS model for evacuations</li>
+          <li>Guest: Technica Universtiy of Munich LBCS model for evacuations</li>
         </ul>
       </section>
 
