--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
             Ghoreishi, B., Staes, B.M., Liu, C., Wang, H. (2025). Mapping Climate Extremes and Infrastructure Vulnerability: A New Database for U.S. Railroads. <i>Submitted</i>.
           </li>
           <li>
-            Staes, B.M., Ghoreishi, B., Liu, C., Wang, H. Simplified Risk Analysis Framework for Rail Thermal Buckling Under Future Climatic Extremes. <i>Working paper</i>.
+            Staes, B.M., Ghoreishi, B., Liu, C., Wang, H.Future extreme heat will require multi-billion-dollar rail upgrades and continual maintenance in the United States. <i>Working paper to be submitted to Nature Communications</i>.
           </li>
           <li>
-            Yuksel, E., Bertini, R.L., Li, X., Staes, B.M., Ozkul, S. (2022). State-Dependent PCE for Multiple Truck Lengths.
+            Siam, M.R.K., Staes, B.M., Lindell, M.K. and Wangm H. (2024). Lessons Learned From the 2018 Attica Wildfire: Households’ Expectations of Evacuation Logistics and Evacuation Time Estimate Components. Fire Technology, 61. https://doi.org/10.1007/s10694-024-01640-7
+          </li>
+            Staes, B.M., Bertini, R.L., Menon, N., and Yuksel, E. (2021). Examining Freeway Bottleneck Features During a Mass Evacuation. Transportation Research Record, 2675(9). doi:10.1177/03611981211003588
             <i>TRR</i>.
           </li>
           <li>
